fixed the issue with clip aps overflowy

--- a/src/components/4-interface/sidebar_control/_SidebarControl.module.scss
+++ b/src/components/4-interface/sidebar_control/_SidebarControl.module.scss
@@ -1,6 +1,6 @@
 .body {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: clip;
+  overflow-x: visible;
   background-color: #022d6c;
   padding: 0.8rem;
   display: grid;
